--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -265,7 +265,7 @@ by $(h.\varphi)(x)=\varphi(h^{-1}.x)$.
 This leads to the following standard definition
 \begin{defn}\label{Def:WreathProd}
 Let $G$ and $H$ be groups and $X$ be a set on which $H$ acts.
-The \emph{(retricted \footnote{There exists an unrestricted version of this product where the direct sum is remplaced by a direct product}) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
+The \emph{(retricted \footnote{There exists an unrestricted version of this product where the direct sum is remplaced by a direct product.}) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
 \end{defn}
 For $g$ in $G$ and $x$ in $X$, we define the following analogs of Kronecker's delta functions
 \begin{equation*}
@@ -294,20 +294,79 @@ Other (trivial) examples of wreath products are direct products $G\times H$ whic
 %%%%%%%%%%%%%%    Subsection : Actions with bounded orbits    %%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Actions with bounded orbits}
+\subsection{Classical actions with bounded orbits} \GS{Réorganisation de cette section}
 %
 %
 %
-Recall that a metric space $(X,d)$ is \emph{ultrametric} if $d$ satisfies the strong triangular inequality: $d(x,y)\leq\max\{d(x,z),d(z,y)\}$ for any $x$, $y$ and $z$ in $X$. 
+We will discuss some classical group properties which are defined by actions with bounded orbits on various metric spaces.
 
+\paragraph{Median graphs}
 For $u$ and $v$ two vertices of a connected\footnote{We will always assume that our connected graphs are non-empty. This is coherent with the definition that a connected graph is a graph with exactly one connected component.} graph $\mathcal G$, we define the total interval $[u,v]$ as the set of vertices that lie on some shortest path between $u$ and $v$.
-A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$.
-A graph is \emph{median} if each of its connected components is median. For more on median graphs and spaces see \cite{MR2405677,MR2671183,MR1705337}.
+A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$. A graph is \emph{median} if each of its connected components is median. For more on median graphs and spaces see \cite{MR2405677,MR2671183,MR1705337}. If $X$ and $Y$ are both (connected) median graphs, then their cartesian product is also a (connected) median graph. Trees are the simplest examples of such graphs. The ensuing example is important for the following.
+%
+%
+\begin{exmp}\label{Ex:MainMedian}
+Let $X$ be a set and let  $\powerset{X}=2^X$ be the set of all subsets of~$X$.
+Define a graph structure on $\powerset{X}$ by putting an edge between $E$ and $F$ if and only if $\#(E\Delta F)=1$, where $\Delta$ is the symmetric difference.
+Therefore, the distance between two subsets $E$ and $F$ is $E\Delta F$ and
+the connected component of $E$ is the set of all subsets $F$ with $E\Delta F$ finite.
+For $E$ and $F$ in the same connected component, $[E,F]$ consists of all subsets of $X$ that both contain $E\cap F$ and are contained in $E\cup F$.
+In particular, $\powerset{X}$ is a median graph, with $m(D,E,F)$ being the set of all elements belonging to at least two of $D$, $E$ and $F$. In other words, $m(D,E,F)=(D\cap E)\cup(D\cap F)\cup(E\cap F)$.
+\end{exmp}
+%
+%
+%We denote by $\powersetf{X}$, respectively $\powersetcof{X}$ the set of all finite, respectively cofinite, subsets of $X$.
+%They are connected components of $\powerset{X}$, which coincide if and only if $X$ is finite.
+%More generally, 
+%Connected components of $\powerset{X}$ are hypercubes and it turns out that every connected median graph is a retract of a connected component of some $\powerset{X}$, see \cite{Bandelt1984}.
+
+These graphs will be fundamental for us due to the following fact.
+Any action of a group $G$ on a set $X$ naturally extends to an action of $G$ on $\powerset{X}$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
+Note that the action of $G$ on $\powerset{X}$ may exchange the connected components.
+In fact, the connected component of $E\subset X$ is stabilized by $G$ if and only if $E$ is \emph{commensurated} by~$G$, that is if for every $g\in G$ the set $E\Delta gE$ is finite.
+%For example, both $\powersetf{X}$ and $\powersetcof{X}$ are always preserved by the action of $G$.
 %
 %
 %
 %
-\paragraph{Some group properties}
+\paragraph{Uncountable cofinality}
+Recall that a metric space $(X,d)$ is \emph{ultrametric} if $d$ satisfies the strong triangular inequality: $d(x,y)\leq\max\{d(x,z),d(z,y)\}$ for any $x$, $y$ and $z$ in $X$. A group $G$ has \emph{uncountable cofinality}, or cof~$\neq\omega$, if every action on ultrametric spaces has bounded orbits. The following characterization of groups without cof~$\neq\omega$ is well-known and we include a proof only for the sake of completeness.
+It implies in particular that a countable group has cof~$\neq\omega$ if and only if it is finitely generated.
+%
+%
+\begin{lem}\label{Lemma:CofSub}
+Let $G$ be a group. Then the following are equivalent:
+\begin{enumerate}
+\item $G$ can be written as a countable increasing union of proper subgroups,
+\item $G$ does not have cof~$\neq\omega$, i.e. there exists an ultrametric space $X$ on which $G$ acts with an unbounded orbit,
+\item There exists a $G$-invariant (for the action by left multiplication) ultrametric $d$ on $G$ such that $G\curvearrowright G$ has an unbounded orbit.
+\end{enumerate}
+\end{lem}
+\begin{proof}
+It is clear that the third item implies the second.
+
+Suppose that $(X,d)$ is an ultrametric space on which $G$ acts with an unbounded orbit and let $x_0$ be an element of $X$ such that $G.x_0$ is unbounded. For any $n\in \N$ let $H_n$ be the subset of $G$ defined by
+\[
+	H_n\coloneqq\setst{g\in G}{d(x_0,g.x_0)\leq n}.
+\]
+It is clear that $G$ is the increasing union of the (countably many) $H_n$.
+On the other hand, the $H_n$ are subgroups of $G$. Indeed, $H_n$ is trivially closed under taking the inverse, and is also closed under taking products since $d(x_0,gh.x_0)\leq\max\{d(x_0,g.x_0),d(g.x_0,gh.x_0)\}=\max\{d(x_0,g.x_0),d(x_0,h.x_0)\}$. As $G.x_0$ is unbounded, they are proper subgroups.
+
+Finally, suppose that $G=\bigcup_{n\in \N}H_n$ where the $H_n$ form an increasing sequence of proper subgroups. It is always possible to suppose that $H_0=\{1\}$.
+Define $d$ on $G$ by $d(g,h)\coloneqq\min\setst{n}{g^{-1}h\in H_n}$.
+One easily verifies that $d$ is a $G$-invariant ultrametric. Moreover, the orbit of $1$ contains all of $G$ and is hence unbounded.
+\end{proof}
+%
+%
+A slight variation of the above lemma gives us
+\begin{exmp}\label{Exmpl:Ultra}
+Let $(G_i)_{i\geq 1}$ be non-trivial groups and let $G\coloneqq\bigoplus_{i\geq 1} G_i$ be their direct sum.
+Then $d_\infty(f,g)\coloneqq\max\setst{i}{f(i)\neq g(i)}$ is an ultrametric on $G$ which is $G$-invariant for the action of $G$ on itself by left multiplication.
+\end{exmp}
+%
+%
+%
+\paragraph{Group properties}
 We now discuss the bounded orbits properties introduced above for actions on various classes of metric spaces.
 %\PH{Peut-être mettre une phrase avec les réf de première fois où ça été étudié. Soit avant la déf, soit dans le paragraphe après} \GS{On a mis déjà pas mal de références à mon avis...}
 %
@@ -330,7 +389,7 @@ In the above, \emph{actions} are supposed to preserve the structure. In particul
 %
 %
 The names FH, FW and FA come from the fact that these properties admit a description in terms of (and were fist studied in the context of) the existence of a Fixed point for actions on Hilbert spaces, on spaces with Walls (or equivalently on CAT(0) cube complexes) and on trees (\emph{Arbres} in french).
-Finally, a group has cof~$\neq\omega$ (does not have \emph{countable cofinality}) if and only if it cannot be written as a countable increasing union of proper subgroups, see Lemma~\ref{Lemma:CofSub}.
+%Finally, a group has cof~$\neq\omega$ (does not have \emph{countable cofinality}) if and only if it cannot be written as a countable increasing union of proper subgroups, see Lemma~\ref{Lemma:CofSub}.
 
 For countable groups (and more generally for $\sigma$-compact locally compact groups), property FH is equivalent to the celebrated Kazdhan's property (T) by the Delorme-Guichardet theorem, but this is not true in general. Indeed in \cite{MR2240370}, Cornulier constructed an uncountable discrete group $G$ with Bergman property which, as we will see just below, implies property FW. Such a group cannot have property (T) as, for discrete groups, it implies finite generation.
 \GS{Ajouter Banach}
@@ -338,7 +397,7 @@ For countable groups (and more generally for $\sigma$-compact locally compact gr
 
 %There are strong links between the properties of Definition~\ref{Def:FHFA} %\cite{MR1432323,MR0476875,MR3299841,Cornulier2013}
 \begin{prop} \GS{J'ai formulé cela comme une proposition pour que cela ressorte plus, à voir ce que tu préfères}
-The properties of Definition~\ref{Def:FHFA} are links as follows:
+There are the following implications between the properties of Definition~\ref{Def:FHFA}:
 \begin{equation}\tag{\dag}\label{EQ:Implications}
 	\textnormal{Bergman property}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies\textnormal{cof~$\neq\omega$}.
 \end{equation}
@@ -373,70 +432,6 @@ Finally, $\Z$ has cof~$\neq\omega$, while it acts by translations and with unbou
 It is possible to consider relative versions of the properties appearing in Definition~\ref{Def:FHFA}. \GS{pas besoin d'expliquer BS comme introduit plus haut} %\PH{J'ai mis cela ici, mais on peut y bouger dans la prochaine sous-section.}
 If $G$ is a group, $H$ a subgroup of $G$ and \BS{} one of the property of Definition~\ref{Def:FHFA} defined by ``every action on $\mathbf{S}$-spaces is bounded'', we say that the pair $(G,H)$ has \emph{relative property \BS} if for every $G$ action on a $\mathbf{S}$-space, the $H$ orbits are bounded.
 A group $G$ has property \BS{} if and only if for every subgroup $H$ the pair $(G,H)$ has relative property \BS{}, and if and only if for every overgroup $L$ the pair $(L,G)$ has relative property \BS.
-%
-%
-%
-%
-\paragraph{Median graphs}
-It is important to recall that if $X$ and $Y$ are both (connected) median graphs, then their cartesian product is also a (connected) median graph. Trees are the simplest examples of such graphs. The ensuing example is important for the following.
-%
-%
-\begin{exmp}\label{Ex:MainMedian}
-Let $X$ be a set and let  $\powerset{X}=2^X$ be the set of all subsets of~$X$.
-Define a graph structure on $\powerset{X}$ by putting an edge between $E$ and $F$ if and only if $\#(E\Delta F)=1$, where $\Delta$ is the symmetric difference.
-Therefore, the distance between two subsets $E$ and $F$ is $E\Delta F$ and
-the connected component of $E$ is the set of all subsets $F$ with $E\Delta F$ finite.
-For $E$ and $F$ in the same connected component, $[E,F]$ consists of all subsets of $X$ that both contain $E\cap F$ and are contained in $E\cup F$.
-In particular, $\powerset{X}$ is a median graph, with $m(D,E,F)$ being the set of all elements belonging to at least two of $D$, $E$ and $F$. In other words, $m(D,E,F)=(D\cap E)\cup(D\cap F)\cup(E\cap F)$.
-\end{exmp}
-%
-%
-%We denote by $\powersetf{X}$, respectively $\powersetcof{X}$ the set of all finite, respectively cofinite, subsets of $X$.
-%They are connected components of $\powerset{X}$, which coincide if and only if $X$ is finite.
-%More generally, 
-%Connected components of $\powerset{X}$ are hypercubes and it turns out that every connected median graph is a retract of a connected component of some $\powerset{X}$, see \cite{Bandelt1984}.
-
-These graphs will be fundamental for us due to the following fact.
-Any action of a group $G$ on a set $X$ naturally extends to an action of $G$ on $\powerset{X}$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
-Note that the action of $G$ on $\powerset{X}$ may exchange the connected components.
-In fact, the connected component of $E\subset X$ is stabilized by $G$ if and only if $E$ is \emph{commensurated} by~$G$, that is if for every $g\in G$ the set $E\Delta gE$ is finite.
-%For example, both $\powersetf{X}$ and $\powersetcof{X}$ are always preserved by the action of $G$.
-
-\paragraph{Groups with cof~$\neq\omega$}
-The following characterization of groups without cof~$\neq\omega$ is well-known and we include a proof only for the sake of completeness.
-It implies in particular that a countable group has cof~$\neq\omega$ if and only if it is finitely generated.
-%
-%
-\begin{lem}\label{Lemma:CofSub}
-Let $G$ be a group. Then the following are equivalent:
-\begin{enumerate}
-\item $G$ can be written as a countable increasing union of proper subgroups,
-\item $G$ does not have cof~$\neq\omega$, i.e. there exists an ultrametric space $X$ on which $G$ acts with an unbounded orbit,
-\item There exists a $G$-invariant (for the action by left multiplication) ultrametric $d$ on $G$ such that $G\curvearrowright G$ has an unbounded orbit.
-\end{enumerate}
-\end{lem}
-\begin{proof}
-It is clear that the third item implies the second.
-
-Suppose that $(X,d)$ is an ultrametric space on which $G$ acts with an unbounded orbit and let $x_0$ be an element of $X$ such that $G.x_0$ is unbounded. For any $n\in \N$ let $H_n$ be the subset of $G$ defined by
-\[
-	H_n\coloneqq\setst{g\in G}{d(x_0,g.x_0)\leq n}.
-\]
-It is clear that $G$ is the increasing union of the (countably many) $H_n$.
-On the other hand, the $H_n$ are subgroups of $G$. Indeed, $H_n$ is trivially closed under taking the inverse, and is also closed under taking products since $d(x_0,gh.x_0)\leq\max\{d(x_0,g.x_0),d(g.x_0,gh.x_0)\}=\max\{d(x_0,g.x_0),d(x_0,h.x_0)\}$. As $G.x_0$ is unbounded, they are proper subgroups.
-
-Finally, suppose that $G=\bigcup_{n\in \N}H_n$ where the $H_n$ form an increasing sequence of proper subgroups. It is always possible to suppose that $H_0=\{1\}$.
-Define $d$ on $G$ by $d(g,h)\coloneqq\min\setst{n}{g^{-1}h\in H_n}$.
-One easily verifies that $d$ is a $G$-invariant ultrametric. Moreover, the orbit of $1$ contains all of $G$ and is hence unbounded.
-\end{proof}
-%
-%
-A slight variation of the above lemma gives us
-\begin{exmp}\label{Exmpl:Ultra}
-Let $(G_i)_{i\geq 1}$ be non-trivial groups and let $G\coloneqq\bigoplus_{i\geq 1} G_i$ be their direct sum.
-Then $d_\infty(f,g)\coloneqq\max\setst{i}{f(i)\neq g(i)}$ is an ultrametric on $G$ which is $G$-invariant for the action of $G$ on itself by left multiplication.
-\end{exmp}
-%
 %
 %
 %
